fixed text-align on presentacion for mobiles

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -286,6 +286,7 @@ footer p {
 
     .wrapper .intro .presentacion h2 {
         font-size: 1.2em;
+        text-align: center;
     }
 
     .wrapper .intro .presentacion h2 span {
@@ -300,7 +301,6 @@ footer p {
         text-align: center;
     }
 
-    
     footer {
         margin-top: 2%;
     }
